fix(form-group): restore responsive spacing

--- a/packages/toolkit/core/objects/_form-group.scss
+++ b/packages/toolkit/core/objects/_form-group.scss
@@ -1,5 +1,5 @@
 .ofh-form-group {
-  @include ofh-responsive-margin(16, 'bottom');
+  @include ofh-responsive-margin(24, 'bottom');
 
   .ofh-form-group:last-of-type {
     margin-bottom: 0; // Remove margin from last item in nested groups
